--- a/openpose_wrapper/CMakeLists.txt
+++ b/openpose_wrapper/CMakeLists.txt
@@ -149,8 +149,8 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(${PROJECT_NAME}_node src/${PROJECT_NAME}_node.cpp)
-add_executable(${PROJECT_NAME}_3d_node src/${PROJECT_NAME}_3d_node.cpp)
+add_executable(${PROJECT_NAME}_node src/${PROJECT_NAME}_node.cpp src/wrapper.cpp)
+add_executable(${PROJECT_NAME}_3d_node src/${PROJECT_NAME}_3d_node.cpp src/wrapper.cpp)
 
 add_executable(${PROJECT_NAME}_nico_node src/${PROJECT_NAME}_nico_node.cpp)
 
